--- a/templates/login.html
+++ b/templates/login.html
@@ -223,7 +223,7 @@
         <div class="form-group">
           <select id="regType" required>
             <option value="">Select Type</option>
-            <option value="user">Athlete</option>
+            <option value="athletes">Athlete</option>
             <option value="sponsor">Sponsor</option>
             <option value="coach">Coach</option>
           </select>
