application form added

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -96,13 +96,13 @@
         <div style="font-weight:700">Sporture</div>
       </div>
 
-      <div class="nav">
-        <a class="active">Feed</a>
-        <a>Athletes</a>
-        <a>Sponsors</a>
-        <a>Coaches</a>
-        <a>Applications</a>
-      </div>
+     <div class="nav">
+      <a class="active" href="feed.html">Feed</a>
+      <a href="athletes.html">Athletes</a>
+      <a href="sponsors.html">Sponsors</a>
+      <a href="coaches.html">Coaches</a>
+      <a href="/application">Applications</a>
+    </div>
 
       <div style="flex:1"></div>
 
