--- a/templates/index.html
+++ b/templates/index.html
@@ -412,6 +412,7 @@
         <nav class="nav-links">
           <a href="#slide-hero" class="active">Home</a>
           <a href="#slide-about">About Us</a>
+          <a href="adminlogin.html">Admin</a>
           <a href="#slide-testimonials">Testimonials</a>
           <a href="/login_page">Login/Register</a>
           <a href="#slide-contact">Contact Me</a>
