--- a/templates/admin.html
+++ b/templates/admin.html
@@ -153,9 +153,9 @@
     <div class="admin-panel"> ADMIN PANEL</div>
 
     <div class="container">
-        <div class="box" onclick="navigateTo('/add')">ATHELETES</div>
-        <div class="box" onclick="navigateTo('/users')">COACHES</div>
-        <div class="box" onclick="navigateTo('/users')">SPONSERS</div>
+       <div class="box" onclick="navigateTo('/manage_users?type=athlete')">ATHLETES</div>
+        <div class="box" onclick="navigateTo('/manage_users?type=coach')">COACHES</div>
+        <div class="box" onclick="navigateTo('/manage_users?type=sponsor')">SPONSORS</div>
          <div class="box" onclick="navigateTo('/users')">APPPLICATION VERIFICATION</div>
     </div>
 
